# slipy-dev

./: .gitignore  .travis.yml  README.md  setup.cfg
slipy/: __init__.py
slipy/spectrum/: __init__.py  spectrum.py
slipy/spectrum/algorithms/: __init__.py  rms.py  xcorr.py
slipy/spectrum/calibration/: __init__.py  apply_velocity_correction.py  normalize.py  remove_telluric.py
slipy/spectrum/core/: __init__.py  copy.py  from_array.py  from_file.py  init.py  insert.py  resample.py
slipy/spectrum/etc/: __init__.py  contains.py  getitem.py  len.py  repr.py  str.py
slipy/spectrum/gui/: __init__.py  auto_fit.py  base.py  deblend.py  draw.py  extract_line.py  fit.py  select_line.py
slipy/spectrum/measurement/: __init__.py  column_density.py  equivalent_width.py  optical_depth.py
slipy/spectrum/operations/: __init__.py  add.py  and.py  base.py  eq.py  ge.py  iadd.py  imul.py  isub.py  itruediv.py  lshift.py  lt.py  mul.py  ne.py  radd.py  rmul.py  rshift.py  rsub.py  rtruediv.py  sub.py  truediv.py
