[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = slipy
description = Astropy affiliated package
long_description = Spectroscopic Library for Python (depends on astropy)
author = Geoffrey Lentner
author_email = glentner@nd.edu
license = BSD
url = glentner.github.io/slipy
edit_on_github = True
github_project = glentner/slipy

[entry_points]
astropy-package-template-example = slipy.example_mod:main
